# task-tracker-api

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  dockerfile  pyproject.toml  readme.md  requirements.txt  test_main.py
app/: auth.py  database.py  main.py  schemas.py  task.py  user.py
app/core/: config.py  security.py
migrations/: env.py
migrations/versions/: 6ba16b11e921_create_tasks_table.py  769b515dc0aa_init.py
